--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsnd --respawn --clear src/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "node dist/app.js",
+    "start": "node dist/server.js",
     "seed": "ts-node src/data/seed.ts"
   },
   "keywords": [],
