fix: never used user

--- a/server/.env.template
+++ b/server/.env.template
@@ -9,3 +9,6 @@ PORT=3000
 
 # JWT SEED
 JWT_SEED=
+
+# CORS: origins permitidos, separados por coma (añade la URL de Vercel en producción)
+# CORS_ORIGINS=http://localhost:5173,https://tu-app.vercel.app
