fix(server): disable source maps in production build
- Set sourceMap, declaration, and declarationMap to false in tsconfig.json
- Add build:prod script for production builds without source maps
- Prevents exposing source code in production dist folder

Fixes #1

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsnd --respawn --clear src/server.ts",
     "build": "rimraf ./dist && tsc",
+    "build:prod": "rimraf ./dist && tsc --sourceMap false --declaration false --declarationMap false",
     "start": "node dist/server.js",
     "seed": "ts-node src/data/seed.ts"
   },
